--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ header h1 {
 }
 
 .key8 {
-    background-color: rgb(135, 172, 235);
+    background-color: cornflowerblue;
 }
 
 .key9 {
@@ -91,4 +91,29 @@ header h1 {
 
 .key11 {
     background-color: purple;
+}
+
+@keyframes jump {
+    0% {
+        bottom: 0%;
+        left: 20%;
+    }
+    50% {
+        bottom: 50%;
+        left: 50%;
+    }
+    100% {
+        bottom: 0%;
+        left: 80%;
+    }
+}
+
+.visual>div {
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    bottom: 0%;
+    z-index: -1;
+    opacity: 70%;
 }
