--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ header h1 {
 
 .keyboard>div>p {
     color: white;
+    -webkit-text-stroke: 0.5px black;
 }
 
 .keyboard>div:hover {
@@ -134,5 +135,4 @@ header h1 {
     border-radius: 50%;
     bottom: 0%;
     z-index: -1;
-    opacity: 70%;
 }
